fixed boards display on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body{
     transition: 0.5s;
   }
   .footer{
-      margin-top:150px;
+      margin-top:50px;
       padding: 60px;
       line-height: 40px;
       background: black;
@@ -241,17 +241,18 @@ td:active{
     .sidebar a {font-size: 18px;}
   }
 
+
   @media screen and (max-width: 1000px) {
     .boards{
         flex-direction: column-reverse;
-        margin-top: 200px;
+        margin: 300px 0;
     }
     .mid-section{
-        margin-top: 50px;
+        margin-top: 100px;
     }
     .heading{
         font-size: 5vw;
-        margin-top: 30px;
+        margin-top: 100px;
     }
   }
   /* ANIMATIONS */
